# github-personal-stats

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml
.agents/: README.md  current.md  decisions.md  index.md  log.md  program.md  roadmap.md
.agents/checklists/: implementation.md  release.md  review.md  security.md
.agents/knowledge/: api-contracts.md  architecture.md  compatibility.md  deployment.md  rendering.md
.agents/playbooks/: add-card.md  add-parameter.md  change-renderer.md  debug-action.md  release-binary.md  update-readme-mode.md
.agents/raw/: references.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: action_contract.rs  cli.rs
crates/core/: Cargo.toml
crates/core/src/: aggregation.rs  client.rs  config.rs  data.rs  error.rs  json.rs  lib.rs  renderer.rs  workspace.rs
crates/core/tests/: aggregation.rs  github_client.rs  renderer.rs  workspace_info.rs
crates/core/tests/fixtures/: github_user_data.json
crates/core/tests/snapshots/: coding_activity.md
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/tests/: server.rs
deploy/: README.md
deploy/k8s/: deployment.yaml
deploy/vercel/: README.md
docs/: user-guide.md
examples/: showcase.json
scripts/: install-action-binary.sh
tests/: workspace_smoke.rs
