[package]
name = "github-personal-stats-core"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bytes = "1.11.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "http2", "ring", "webpki-roots"] }
hyper-util = { version = "0.1.18", features = ["client-legacy", "http1", "http2", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time"] }
